# MyAwesomeComponents

./: CMakeLists.txt  FanForceField.inl  MyAwesomeComponentsConfig.cmake.in  README.md  initMyAwesomeComponents.cpp
example/: TetrahedronDiffusionFEM-ExplicitBDFSolver.scn  TriangleSurfaceCutting_FanForceField.scn
src/: ExplicitBDFSolver.cpp  FanForceField.cpp  FanForceField.h  FanForceField.inl
src/MyAwesomeComponents/: ExplicitBDFSolver.cpp  ExplicitBDFSolver.h  FanForceField.cpp  FanForceField.h  FanForceField.inl  config.h  config.h.in  initMyAwesomeComponents.cpp
